@@ -1,3 +1,8 @@
+2014-06-12  Michael Wright <wrigh517@msu.edu>
+
+    * sandbox/load-into-hashbits: Deleted from sandbox. It is superseded
+    by load-graph.py
+
 2014-06-11  Michael Wright <wrigh517@msu.edu>
 
     * scripts/load-into-counting: Fixed docstring misnomer to 
